--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,16 @@ body {
   color: #333;
 }
 
-*{
-  font-family: "PP Pangram Sans Medium";
-  font-weight: 500;
+@font-face {
+  font-family: 'ppfont'; /* Name to reference the font */
+  src: url('./assets/fonts/PPPangramSans-Medium.woff2') format('woff2'),
 }
+
+*{
+  font-weight: 500;
+    font-family:"ppfont",-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
 button {
   transition: all 0.3s ease;
 }
